fix (scrollbar) delete redundant css styles

--- a/src/scss/custom-reset.scss
+++ b/src/scss/custom-reset.scss
@@ -7,7 +7,6 @@
 html {
     box-sizing: border-box;
     height: 100%;
-    overflow: hidden;
 }
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
